added some project

--- a/index.html
+++ b/index.html
@@ -1,20 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Website</title>
-</head>
-<body>
-  <header>
-
-  </header>
-  <main>
-
-  </main>
-  <footer>
-    
-  </footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My First Website</title>
+    <link rel="stylesheet" href="style/style.css" />
+  </head>
+  <body>
+    <header>
+      <section class="normal">
+        <div class="first">
+          <h1 style="font-weight: bolder;">Let's make beautiful flowers a part of your life.</h1>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout. The point
+            of using Lorem Ipsum is that it has a more-or-less normal
+            distribution of letters.
+          </p>
+          <button class="btn">shop now</button>
+        </div>
+        <div >
+          <img class="img"
+            src="/Flower Asset/pngwing 10.png"
+            alt=""
+          />
+        </div>
+      </section><br><br><br><br><br>
+      <section class="normal">
+        <div class="second">
+          <h1>Hot Deal ! Sale Up To 25% <span style="color:#E55473 ;">Off</span></h1>
+          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          <button class="btn">Sing Up</button>
+        </div>
+        <div id="img" ><img class="img2" src="./Flower Asset/pngwing 8.png" alt=""></div>
+      </section><br><br><br><br><br>
+    </header>
+    <main>
+      <header>
+        <section>
+          <div class="third">
+            <h1>Instagram</h1>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          </div>
+          <div class="third">
+            <ul>
+              <li><img src="./Flower Asset/Flower 01.png" alt=""></li>
+              <li><img src="./Flower Asset/Rectangle 4.png" alt=""></li>
+              <li><img src="./Flower Asset/Rectangle 5.png" alt=""></li>
+              <li><img src="./Flower Asset/Rectangle 6.png" alt=""></li>
+            </ul>
+          </div>
+        </section><br><br><br><br><br><br><br><br>
+        <header class="section-2">
+          <div>
+            <h1>Get The Latest Deals</h1>
+            <p>$30 coupon for first shopping</p><br><br><br>
+            <div>
+              <input style="width:866px;height: 64px;"type="email" name="enter Your email Here" id="">
+              <input class="btn" type="submit" value="subscribe">
+            </div>
+          </div>
+          
+        </>
+      </header>
+    </main>
+    <footer></footer>
+  </body>
 </html>
