--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
+    <h1></h1>
     <header>
       <section class="normal">
         <div class="first">
@@ -58,13 +59,19 @@
             <p>$30 coupon for first shopping</p><br><br><br>
             <div>
               <input style="width:866px;height: 64px;"type="email" name="enter Your email Here" id="">
-              <input class="btn" type="submit" value="subscribe">
+              <input style="width:150px; height: 64px;" class="btn" type="submit" value="subscribe">
             </div>
           </div>
           
-        </>
+        
       </header>
     </main>
-    <footer></footer>
+    <section class="last">
+      <div class="uuu">
+        <h1><span style="color:#E55473 ;">Flower</span><span style="color: aliceblue;">Shop</span> </h1>
+        <p style="color:#ffffffc9 ;">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <p style="color: rgba(240, 248, 255, 0.454);"><small>@2020-2023, FlowerShop.com. All rights reserved. </small></p>
+      </div>
+    </section>
   </body>
 </html>
